# game.libretro.fbalpha2012

./: CMakeLists.txt
depends/common/fbalpha2012/: CMakeLists.txt  fbalpha2012.txt
game.libretro.fbalpha2012/: addon.xml.in
game.libretro.fbalpha2012/resources/: settings.xml
game.libretro.fbalpha2012/resources/language/English/: strings.po
